--- a/src/styles/shoes.css
+++ b/src/styles/shoes.css
@@ -3,10 +3,10 @@
     flex-flow: row wrap;
   }
 
-.images{
+/* .images{
     padding-top: 35px;
     padding-left: 35px;
-}
+} */
 
 .stars{
   padding-left: 20%;
